update for cicd

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,9 +22,9 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>My name is Rubaet Welcome to the Sparta Test App</h1>
+    <h1>My name is Rubaet Welcome to the Sparta Test App nice to meet you</h1>
     <img src="/images/squarelogo.jpg" />
-    <h2>The app is running correctly.</h2>
+    <h2>The app is running correctly with jenkins.</h2>
     
   </div>
 </body>
