--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,15 +22,21 @@
 </head>
 <body>
   <div class="vertical-center">
-<<<<<<< HEAD
+    HEAD
+    HEAD
     <h1>My name is Rubaet Welcome to the Sparta Test App nice to meet you</h1>
     <img src="/images/squarelogo.jpg" />
     <h2>The app is running correctly with jenkins.</h2>
-=======
+
     <h1>Welcome to the Sparta Test App</h1>
     <img src="/images/squarelogo.jpg" />
     <h2>The app is running correctly.</h2>
->>>>>>> 8941fc2 (jenkins)
+         8941fc2 (jenkins)
+
+    <h1>Hi I'm Rubaet Welcome to the Sparta Test App</h1>
+    <img src="/images/squarelogo.jpg" />
+    <h2>The app is running correctly with jenkins.</h2>
+       56188a6 (new changes)
     
   </div>
 </body>
