--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,8 +22,7 @@
 </head>
 <body>
   <div class="vertical-center">
-    HEAD
-    HEAD
+    HELLO EVERYONE ;)
     <h1>My name is Rubaet Welcome to the Sparta Test App nice to meet you</h1>
     <img src="/images/squarelogo.jpg" />
     <h2>The app is running correctly with jenkins.</h2>  
