--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -24,7 +24,7 @@
   <div class="vertical-center">
     HELLO EVERYONE ;)
     <h1>My name is Rubaet Welcome to the Sparta Test App nice to meet you</h1>
-    <img src="/images/image.jpg" />
+    <img src="/images/image.png" />
     <h2>The app is running correctly with jenkins.</h2>
   </div>
 </body>
